@@ -2,7 +2,6 @@
 A View may either have an associated template or a render-method. Here
 we check that this also works for templates in a template-directory:
 
-  >>> grok.testing.grok('grok.templatereg')
   >>> grok.testing.grok(__name__)
   Traceback (most recent call last):
     ...
