@@ -2,7 +2,6 @@
 Templates that are not associated with a view class will provoke an
 error:
 
-  >>> grok.testing.grok('grok.templatereg')
   >>> grok.testing.grok(__name__)
   Traceback (most recent call last):
   ...
