@@ -7,7 +7,9 @@ Grok changes
 Bug fixes
 ---------
 
-* ...
+* Fix https://bugs.launchpad.net/grok/+bug/161948: grok.testing.grok()
+  now also loads the ZPT template factories so that unit tests that
+  need to configure views with ZPT templates continue to work.
 
 0.11 (2007-11-08)
 =================
